--- a/styles.css
+++ b/styles.css
@@ -129,3 +129,15 @@ a:hover {
 .align-items-center {
 	align-items: center;
 }
+.profile-image {
+    margin-right: 20px;
+}
+
+.profile-name {
+    margin-left: 20px;
+}
+
+.list-inline {
+    margin-left: 10px;
+}
+
